--- a/app/assets/stylesheets/system/core/_typography.scss
+++ b/app/assets/stylesheets/system/core/_typography.scss
@@ -8,7 +8,7 @@ body {
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font-family: 'Inter', sans-serif;
-  font-size: system-font-size(sm);
+  font-size: system-font-size(lg);
   color: system-color(gray,800);
 }
 @supports (font-variation-settings: normal) {
