--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,8 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <%= link_to current_user.email, edit_user_registration_path, :class => '#' %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => '#'  %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path, :class => '#'  %>
-      <%= link_to "Login", new_user_session_path, :class => '#'  %>
-    <% end %>
     <%= yield %>
+    <%= component "footer" %>
     <%= component "alert", id: "notice", message: notice %>
     <%= component "alert", id: "alert", message: alert %>
   </body>
