--- a/app/views/moments/index.html.erb
+++ b/app/views/moments/index.html.erb
@@ -1,23 +1,8 @@
 <%= component "nav" do %>
   <%= link_to '📅 New Moment', new_moment_path %>
 <% end %>
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th></th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @moments.each do |moment| %>
-      <tr>
-        <td><%= moment.title %></td>
-        <td><%= ( moment.date - Date.today() ).to_i %> Days</td>
-        <td><%= link_to 'Edit', edit_moment_path(moment) %></td>
-        <td><%= link_to 'Destroy', moment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= component "container" do %>
+  <% @moments.each do |moment| %>
+    <%= component "moment", title: moment.title, date: ( moment.date - Date.today() ).to_i, link: edit_moment_path(moment)  %>
+  <% end %>
+<% end %>
