style moment card

--- a/app/assets/stylesheets/system/tokens/_color.scss
+++ b/app/assets/stylesheets/system/tokens/_color.scss
@@ -126,7 +126,7 @@ $system-colors: (
     900: #e65100,
   ),
   gray: (
-    100: #cfd8dc,
+    100: #eee,
     200: #b0bec5,
     300: #90a4ae,
     400: #78909c,
