--- a/app/components/logo/_logo.html.erb
+++ b/app/components/logo/_logo.html.erb
@@ -1,1 +1,3 @@
-<%= link_to 'Moments', moments_path, class: "system-logo" %>
+<%= link_to moments_path, class: "system-logo" do %>
+  ⚫ Moments
+<% end %>
