--- a/app/views/moments/new.html.erb
+++ b/app/views/moments/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Moment</h1>
-
-<%= render 'form', moment: @moment %>
-
-<%= link_to 'Back', moments_path %>
+<%= component "nav" do %><% end %>
+<%= component "container" do %>
+  <%= render 'form', moment: @moment %>
+<% end %>
